// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Test UserImage component can toggle dropdown menu by clicking user avatar 1`] = `
<div
  className="mr-2"
  style={
    Object {
      "position": "relative",
    }
  }
>
  <div
    id="dropdown"
    onClick={[Function]}
    style={
      Object {
        "cursor": "pointer",
        "height": "55px",
      }
    }
  >
          
    <img
      alt="Test Test"
      src="https://lh3.googleusercontent.com/a-/AOh14GgHZ_IO2RUfg770gLs9V6UOsJaDMsWmGKP4AUna"
      style={
        Object {
          "borderRadius": "50%",
          "maxHeight": "100%",
        }
      }
    />
  </div>
  <div
    id="dropdown-container"
    style={
      Object {
        "minWidth": "150px",
        "position": "absolute",
        "right": "0",
        "zIndex": 100,
      }
    }
  >
    <Connect(GoogleAuthWrapper)
      menuItems={
        Array [
          Object {
            "exact": true,
            "icon": "thumbs-up",
            "link": "/",
            "name": "Recommend",
          },
          Object {
            "exact": false,
            "icon": "user-plus",
            "link": "/channel",
            "name": "Subscriptions",
          },
          Object {
            "exact": false,
            "icon": "list",
            "link": "/playlist",
            "name": "Play List",
          },
        ]
      }
    />
  </div>
</div>
`;

exports[`Test UserImage component should render UserImage component 1`] = `
<div
  className="mr-2"
  style={
    Object {
      "position": "relative",
    }
  }
>
  <div
    id="dropdown"
    onClick={[Function]}
    style={
      Object {
        "cursor": "pointer",
        "height": "55px",
      }
    }
  >
          
    <img
      alt="Test Test"
      src="https://lh3.googleusercontent.com/a-/AOh14GgHZ_IO2RUfg770gLs9V6UOsJaDMsWmGKP4AUna"
      style={
        Object {
          "borderRadius": "50%",
          "maxHeight": "100%",
        }
      }
    />
  </div>
</div>
`;
